course-create-text-fixx

--- a/src/Topxia/WebBundle/Resources/views/Course/create.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/create.html.twig
@@ -25,7 +25,7 @@
                             <div class="course-select active" data-type="normal">
                                 <i class="es-icon es-icon-putongkecheng "></i>
                                 <div class="course-type">普通课程</div>
-                                <div class="course-intro">完整的教学主干课，支持视频、图文等各种形式</div>
+                                <div class="course-intro">支持视频、图文、PPT等各种形式，支持作业、笔记等多个学习工具的课程</div>
                             </div>
                         </div>
 
@@ -39,7 +39,7 @@
                                     {% endif %}
                                     <i class="es-icon es-icon-zhibokecheng "></i>
                                     <div class="course-type">直播课程</div>
-                                    <div class="course-intro">纯直播形式教学的完整课程</div>
+                                    <div class="course-intro">以直播为教学形式的，支持多个学习工具的课程</div>
                                 </div>
                             </div>
 
@@ -47,7 +47,7 @@
                                 <div class="course-select " data-type="open">
                                     <i class="es-icon es-icon-lubogongkaike"></i>
                                     <div class="course-type">录播公开课</div>
-                                    <div class="course-intro">无门槛观看、结构简单的课程，常用于营销推广</div>
+                                    <div class="course-intro">免费、无门槛观看的视频课程，主要用于营销推广</div>
                                 </div>
                             </div>
 
@@ -61,7 +61,7 @@
                                         {% endif %}
                                         <i class="es-icon es-icon-zhibokecheng2"></i>
                                         <div class="course-type">直播公开课</div>
-                                        <div class="course-intro">直播形式的公开课</div>
+                                        <div class="course-intro">免费、无门槛参与的直播课程，主要用于营销推广</div>
                                     </div>
                                 </div>
                             </div>
