--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -147,11 +147,6 @@
 	&:last-child{
 		margin-bottom: 0;
 	}
-	img{
-    max-width: 120px;
-    width: 120px;
-    height: 64px;
-	}
 	.open-course-img{
 		float: left;
     width: 30%;
@@ -159,10 +154,10 @@
 	}
 	.open-course-content{
 		float: left;
-    width: 64%;
+    width: 63%;
 	}
 	.title {
-		margin: 10px 0;
+		margin: 8px 0 5px;
 		a{
 			.text-overflow;
 			color:@gray-darker;
