--- a/web/assets/v2/css/main-orange-light.css
+++ b/web/assets/v2/css/main-orange-light.css
@@ -3364,7 +3364,7 @@ Pagination Styles
 }
 .ps-container .ps-scrollbar-x-rail:hover .ps-scrollbar-x,
 .ps-container .ps-scrollbar-x-rail.hover .ps-scrollbar-x {
-  background-color: #999;
+  background-color: #999999;
 }
 .ps-container .ps-scrollbar-y {
   position: absolute;
@@ -3384,7 +3384,7 @@ Pagination Styles
 }
 .ps-container .ps-scrollbar-y-rail:hover .ps-scrollbar-y,
 .ps-container .ps-scrollbar-y-rail.hover .ps-scrollbar-y {
-  background-color: #999;
+  background-color: #999999;
 }
 .ps-container.ie .ps-scrollbar-x,
 .ps-container.ie .ps-scrollbar-y {
@@ -10918,7 +10918,7 @@ textarea {
   min-height: 500px;
 }
 .loading-background {
-  background: #fff url('../img/old/loader.gif') no-repeat center center;
+  background: #ffffff url('../img/old/loader.gif') no-repeat center center;
 }
 .slide-player-watermark {
   position: absolute;
@@ -13789,11 +13789,6 @@ textarea {
 .open-course-recommend:last-child {
   margin-bottom: 0;
 }
-.open-course-recommend img {
-  max-width: 120px;
-  width: 120px;
-  height: 64px;
-}
 .open-course-recommend .open-course-img {
   float: left;
   width: 30%;
@@ -13801,10 +13796,10 @@ textarea {
 }
 .open-course-recommend .open-course-content {
   float: left;
-  width: 64%;
+  width: 63%;
 }
 .open-course-recommend .title {
-  margin: 10px 0;
+  margin: 8px 0 5px;
 }
 .open-course-recommend .title a {
   display: block;
