--- a/src/Topxia/WebBundle/Resources/views/Group/add-thread.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/add-thread.html.twig
@@ -40,7 +40,7 @@
           </div>
         </div>
 
-        {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'thread', targetId: thread.id|default(0)})) }}
+        {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'group.thread', targetId: thread.id|default(0)})) }}
 
         <div class="row">
           <div class="col-sm-7 col-xs-10 col-xs-offset-2">
