--- a/src/Topxia/WebBundle/Resources/views/Group/thread.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/thread.html.twig
@@ -42,7 +42,7 @@
       </div>
 
       {{threadMain.content|raw}}
-      {{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'thread', targetId: threadMain.id })) }}
+      {{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'group.thread', targetId: threadMain.id })) }}
       {% if attachs %}
         <hr>
         <span class="glyphicon glyphicon-paperclip"></span> {{'附件下载'|trans}} :
@@ -193,6 +193,7 @@
 
               <div class="content editor-text">
                 {{post.content|raw}}
+                  {{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'group.thread.post', targetId: post.id })) }}
               </div>
 
               <div class="actions">
@@ -296,6 +297,11 @@
               <textarea name="content" value="" rows="10" id="post_content" class="form-control" data-image-upload-url="{{ path('editor_upload', {token:upload_token('default')}) }}" data-image-download-url="{{ path('editor_download', {token:upload_token('default')}) }}"></textarea>
             </div>
           </div>
+
+            <div class="form-group">
+                {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'group.thread.post', targetId: thread.id|default(0)})) }}
+            </div>
+
           <div class="form-group">
             <div class="controls">
             <button id="post-thread-btn" data-submiting-text="{{'正在回复'|trans}}" type="submit" class="post-thread-btn btn btn-primary pull-right">{{'发表'|trans}}</button>
