--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-info-bar-block.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-info-bar-block.html.twig
@@ -32,7 +32,9 @@
       <div class="operation-img operation-collection {% if memberFavorite %}active{% endif %}">
         <a href="javascript:;" class="js-favorite-num"
            data-cancel-favorite-url="{{ path('open_course_unfavorite',{id:course.id}) }}"
-           data-favorite-url="{{ path('open_course_favorite',{id:course.id}) }}"><i
+           data-favorite-url="{{ path('open_course_favorite',{id:course.id}) }}"
+           data-login-url="{{ path('login_ajax') }}"
+           ><i
               class="es-icon es-icon-bookmarkoutline"></i></a>
       </div>
       <span>{% if memberFavorite %}{{ '已收藏'|trans }}{% else %}{{ '收藏'|trans }}{% endif %}</span>
