--- a/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/banlogs.html.twig
+++ b/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/banlogs.html.twig
@@ -23,15 +23,15 @@
 {% if banlogs %}	
 	<table class="table table-striped table-hover" id="keyword-table">
 	    <thead>
-	    <tr>
-	      <th width="5%">编号</th>
-	      <th width="15%">命中敏感词</th>
-	      <th width="10%">类型</th>
-	      <th width="35%">屏蔽文本</th>
-	      <th width="15%">用户</th>
-	      <th width="20%">屏蔽时间</th>
-				<th>IP地址</th>
-	    </tr>
+		    <tr>
+		      <th width="5%">编号</th>
+		      <th width="10%">命中敏感词</th>
+		      <th width="10%">类型</th>
+		      <th width="35%">屏蔽文本</th>
+		      <th width="10%">用户</th>
+		      <th width="10%">屏蔽时间</th>
+			  <th width="20%">IP地址</th>
+		    </tr>
 	    </thead>
 	    <tbody>
 	    	{% for banlog in banlogs %}
