--- a/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
@@ -1,5 +1,5 @@
 {% if setting('cloud_attachment.enable') and setting('cloud_attachment.' ~ target ) %}
-  {% do load_script('attachment/upload-form') %}
+  {% do load_script('topxiawebbundle/controller/attachment/upload-form') %}
   <div class="form-group">
     <label class="col-xs-2 control-label" for="thread_title">{{ '附件'|trans }}</label>
     <div class="col-xs-7 col-xs-10 controls">
