--- a/src/Topxia/WebBundle/Resources/views/Attachment/upload-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/upload-modal.html.twig
@@ -236,7 +236,7 @@
     </div>
   {% endif %}
 
-  <script>app.load('attachment/upload-modal')</script>
+  <script>app.load('topxiawebbundle/controller/attachment/upload-modal')</script>
 {% endblock %}
 {% block footer %}
   <button type="button" class="btn btn-primary" data-dismiss="modal">关闭</button>
