讨论区分课程和班级

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
@@ -35,9 +35,14 @@
                                  资讯
                              </label>
                              <label class="checkbox-inline">
-                                 <input type="checkbox" name="thread"
-                                        value="1" {% if attachment.thread %} checked {% endif %}>
-                                 讨论区
+                                 <input type="checkbox" name="course"
+                                        value="1" {% if attachment.course %} checked {% endif %}>
+                                 课程讨论区
+                             </label>
+                             <label class="checkbox-inline">
+                                 <input type="checkbox" name="classroom"
+                                        value="1" {% if attachment.classroom %} checked {% endif %}>
+                                 班级讨论区
                              </label>
                              <label class="checkbox-inline">
                                  <input type="checkbox" name="group"
