--- a/src/Topxia/WebBundle/Resources/views/CourseThread/post.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseThread/post.html.twig
@@ -24,6 +24,9 @@
       }}
     </div>
   </div>
+
+  {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'course.thread.post', targetId: thread.id|default(0)})) }}
+
   <div class="form-group">
     <div class="controls clearfix">
       {{ form_rest(form) }}
