试题增加附件支持

--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-essay.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-essay.html.twig
@@ -78,7 +78,10 @@
 					{% include 'TopxiaWebBundle:QuizQuestionTest:flag.html.twig' with { flags:['favorite', 'analysis'] } %}
 				</div>
 			</div>
-			<div class="testpaper-question-analysis well" style="display:none;">{{ item.question.analysis|bbCode2Html|raw|nl2br }}</div>
+			<div class="testpaper-question-analysis well" style="display:none;">
+				{{ item.question.analysis|bbCode2Html|raw|nl2br }}
+				{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.analysis', targetId: item.question.id })) }}
+			</div>
 		{% endif %}
 
 	{% else %}
@@ -107,7 +110,10 @@
 		    </div>
 		</div>
 	  </div>
-	  <div class="testpaper-question-analysis well">{{ item.question.analysis|default('无解析')|bbCode2Html|raw|nl2br }}</div>
+	  <div class="testpaper-question-analysis well">
+	  	{{ item.question.analysis|default('无解析')|bbCode2Html|raw|nl2br }}
+	  	{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.analysis', targetId: item.question.id })) }}
+	  </div>
 	  {% endif %}
 
 
