--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-fill.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-fill.html.twig
@@ -40,7 +40,10 @@
 			</div>
 
 		</div>
-		<div class="testpaper-question-analysis well" style="display:none;">{{ item.question.analysis|bbCode2Html|raw|nl2br }}</div>
+		<div class="testpaper-question-analysis well" style="display:none;">
+			{{ item.question.analysis|bbCode2Html|raw|nl2br }}
+			{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.analysis', targetId: item.question.id })) }}
+		</div>
 	{% else %}
 	  <div class="testpaper-question-footer clearfix">
 		  <div class="testpaper-question-fill-inputs">
@@ -68,7 +71,10 @@
 		    </ul>
 		</div>
 	  </div>
-	  <div class="testpaper-question-analysis well">{{ item.question.analysis|default('无解析'|trans)|bbCode2Html|raw|nl2br }}</div>
+	  <div class="testpaper-question-analysis well">
+	  	{{ item.question.analysis|default('无解析'|trans)|bbCode2Html|raw|nl2br }}
+		{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.analysis', targetId: item.question.id })) }}
+	  </div>
 	  {% endif %}
 
 	{% endif %}
