--- a/src/Topxia/WebBundle/Resources/views/Attachment/upload-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/upload-modal.html.twig
@@ -199,6 +199,8 @@
        data-upload-auth-url = "{{ path('uploader_auth', {token:token}) }}"
        data-accept="{{ uploader_accept(targetType)|json_encode }}"
        data-process="{{ uploader_process(targetType) }}"
+       data-ids-class="{{idsClass}}"
+       data-list-class="{{listClass}}"
   >
     <div class="balloon-uploader-heading">上传文件</div>
     <div class="balloon-uploader-body">
