--- a/src/Topxia/AdminBundle/Resources/views/Default/notice-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/notice-modal.html.twig
@@ -3,11 +3,16 @@
 {% set modalSize = 'large' %}
 {% set modal_class = 'modal-reset' %}
 
+{% set hide_footer = true %}
 
 {% block body %}
   <style>
   .modal-reset{
-    width: 468px;
+    /*width: 468px;*/
+    width: 500px;
+  }
+  .modal-reset img {
+    margin: 0 auto;
   }
   .modal-header{
     border-bottom: none;
@@ -21,9 +26,14 @@
   .modal-header .close{
     width: 30px;
     height: 30px;
-    background: #fff;
-    border-radius: 50%;
     line-height: 30px;
+    color: #fff;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+  }
+  .modal-header .close:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
   }
   .modal-footer{
     border-top: none;
@@ -31,36 +41,29 @@
     margin: 0;
   }
   .modal-body{
-    padding: 0;
+    text-align: center;
+    border-radius: 4px;
+    padding: 40px;
+    background: url('/bundles/topxiaadmin/img/es7-modal-bg.jpg');
   }
-  .modal-body img{
-    width: 100%;
-    padding: 49px;
+  .modal-body .title {
+    margin-bottom: 20px;
   }
-  .modal-body .content{
-    padding-bottom: 40px;
-  }
-  .modal-body h1{
-    font-size: 26px;
-    color: #414141;
-    margin: 0;
-    line-height: 26px;
-    margin-bottom: 19px;
-  }
-  .modal-body p{
-    font-size: 18px;
-    color: #414141;
+  .modal-body .content p{
+    color: #fff;
     line-height: 18px;
-   margin-bottom: 28px;
+    margin-top: 15px;
+    margin-bottom: 28px;
+    letter-spacing: 2px;
   }
   .modal-body .btn-look{
-    padding: 18px 61px;
-    font-size: 22px;
-    color: #5555F9;
-    line-height: 22px;
-    border: 4px solid #5555F9;
-    border-radius: 20px;
+    padding: 10px 30px;
+    font-size: 18px;
+    color: #ffdb16;
+    border: 1px solid #ffdb16;
+    border-radius: 4px;
     display: inline-block;
+    letter-spacing: 5px;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
@@ -68,7 +71,7 @@
   }
   .modal-body .btn-look:hover{
     text-decoration: none;
-    background-color: #5555F9;
+    background-color: #ffdb16;
     color: #fff;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -76,10 +79,12 @@
     transition: all 0.3s ease;
   }
 </style>
-  <img class="img-responsive" src="{{asset('bundles/topxiaadmin/img/teacher_icon.png')}}">
+  <div class="title">
+    <img class="img-responsive" src="{{asset('bundles/topxiaadmin/img/es7-modal-title.png')}}">
+  </div>
   <div class="content text-center">
-    <h1>EduSoho火热更新！</h1>
-    <p>7大功能助力网校Level up</p>
-    <a href="http://www.qiqiuyu.com/article/799" class="btn-look" target="_blank">查看详情</a>
+    <img class="img-responsive" src="{{asset('bundles/topxiaadmin/img/es7-modal-qrcode.jpg')}}" alt="">
+    <p>微信扫一扫 分享我的网校</p>
+    <a href="http://www.qiqiuyu.com/article/799" class="btn-look" target="_blank">查看升级详情</a>
   </div>
 {% endblock %}
