upgrade-modal-url-fix

--- a/src/Topxia/AdminBundle/Resources/views/Default/notice-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/notice-modal.html.twig
@@ -85,6 +85,6 @@
   <div class="content text-center">
     <img class="img-responsive" src="{{asset('bundles/topxiaadmin/img/es7-modal-qrcode.jpg')}}" alt="">
     <p>微信扫一扫 分享我的网校</p>
-    <a href="http://www.qiqiuyu.com/article/799" class="btn-look" target="_blank">查看升级详情</a>
+    <a href="http://www.edusoho.com/info/496/show" class="btn-look" target="_blank">查看升级详情</a>
   </div>
 {% endblock %}
