--- a/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
@@ -13,7 +13,7 @@
       <a class="btn btn-primary js-upload-file" data-toggle="modal" data-backdrop="static"
          data-target="#modal"
          data-url="{{ path('attachment_upload', {idsClass: ids_class, listClass : list_class, token:uploader_token('attachment', app.user.id, 'private')}) }}"
-         title="上传附件" data-placement="bottom">
+         title="上传附件" data-placement="bottom" data-title="上传附件" data-reupload-title="重新上传">
         上传附件
       </a>
     </div>
