--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
@@ -2,11 +2,26 @@
 	 {% set menu = 'admin_edu_cloud_attachment' %} 
 	 {% set script_controller = 'educloud/attachment-setting' %} 
 	 {% block main %}
-         <div class="page-header clearfix">
-             <h1 class="pull-left">云附件</h1>
-         </div>
          <div class="edu-service">
-             <div class="edu-balance">
+            {% if info.accessCloud|default(0) == 0 %}
+                <div class="text-center">
+                  <div class="error-content" style="padding: 100px 100px">
+                    <h4>
+                      您尚未开通云视频服务，无法使用云附件功能，
+                      <a href={{path('admin_setting_cloud_video')}}>立即开通</a>
+                      或
+                      <a href="http://open.edusoho.com/show/cloud/video" target="_blank">了解云视频</a>
+                    </h4>
+                    <p>
+                    “云附件”提供完善的附件功能，满足讨论区，小组，资讯，试题等多种场景的附件上传，让学习，互动，更加完整丰富。
+                    </p>
+                  </div>
+                </div>
+            {% else %}
+                <div class="page-header clearfix">
+                     <h1 class="pull-left">云附件</h1>
+                 </div>
+                 <div class="edu-balance">
                  {{ web_macro.flash_messages() }}
                  <form id="cloud-attachment" class="form-horizontal" method="post" data-widget-cid="widget-0">
                      <div class="form-group">
@@ -72,5 +87,8 @@
                      <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
                  </form>
              </div>
+            {% endif %}
+
+            
          </div>
      {% endblock %}
