--- a/src/Topxia/AdminBundle/Resources/views/CloudAttachment/Form/type.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudAttachment/Form/type.html.twig
@@ -3,8 +3,8 @@
   <li class="active js-targetType-btn" data-value=""><a class="item" href="javascript:;">全部</a></li>
   <li class="js-targetType-btn " data-value="group"><a class="item" href="javascript:;">小组</a></li>
   <li class="js-targetType-btn " data-value="question"><a class="item" href="javascript:;">试题</a></li>
-  <li class="js-targetType-btn " data-value="thread"><a class="item" href="javascript:;">课程讨论区</a></li>
-  <li class="js-targetType-btn " data-value="thread"><a class="item" href="javascript:;">班级讨论区</a></li>
+  <li class="js-targetType-btn " data-value="course"><a class="item" href="javascript:;">课程讨论区</a></li>
+  <li class="js-targetType-btn " data-value="classroom"><a class="item" href="javascript:;">班级讨论区</a></li>
   <li class="js-targetType-btn " data-value="article"><a class="item" href="javascript:;">资讯</a></li>
   <input type="hidden" name="targetType" value="{{ targetType|default('') }}">
 </ul>
