--- a/src/Topxia/WebBundle/Resources/views/powered-by.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/powered-by.html.twig
@@ -1,4 +1,4 @@
-{% if setting('copyright.owned') and setting('copyright.thirdCopyright')|default(0) != 2 and setgging('copyright.licenseDomains') and {{ app.request.server.get('HTTP_HOST') }} in setgging('copyright.licenseDomains')|split(';') %}
+{% if setting('copyright.owned') and setting('copyright.thirdCopyright')|default(0) != 2 and setting('copyright.licenseDomains') and {{ app.request.server.get('HTTP_HOST') }} in setting('copyright.licenseDomains')|split(';') %}
   {% if setting('copyright.name') %}
     Powered by <a href="{{ path('homepage') }}" target="_blank">{{ setting('copyright.name') }}</a>
   {% endif %}
