--- a/src/Topxia/WebBundle/Resources/views/Announcement/announcement-course-nojoin-show-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Announcement/announcement-course-nojoin-show-modal.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{'提示'|trans}}{% endblock %}
 
 {% block body %}
-    <h4>{{'您尚未成为%title%学员,请先成为%title%学员'|trans({'%title%': targetObject.title|default('课程'|trans) })}}</h4>
+    <h4>{{'您尚未成为%courseTitle%学员,请先成为%courseTitle%学员'|trans({'%courseTitle%': targetObject.title|default('课程'|trans) })}}</h4>
 {% endblock %}
 
 {% block footer %}
