--- a/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/redis.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/redis.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Redis Setting - {{ parent() }}{% endblock %}
 
+{% set menu = 'admin_setting_message' %}
+
 {% block content %}
 <div class="page-header"><h1>Redis Setting</h1></div>
 
