--- a/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/version.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/version.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}应用版本修改 - {{ parent() }}{% endblock %}
 
+{% set menu = 'admin_setting_message' %}
+
 {% block content %}
 <div class="page-header"><h1>应用版本修改</h1></div>
 
