--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-fill.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-fill.html.twig
@@ -52,8 +52,13 @@
 			</div>
 
 			<div class="testpaper-question-actions pull-right">
-				{% include 'TopxiaWebBundle:QuizQuestionTest:flag.html.twig' with { flags:['mark', 'favorite'] } %}
-			</div>
+		  	{% if paperResult.status|default(null) in ['doing'] %}
+					{% set flags = ['mark'] %}
+		  	{% else %}
+					{% set flags = ['mark', 'favorite'] %}
+		  	{% endif %}
+				{% include 'TopxiaWebBundle:QuizQuestionTest:flag.html.twig' with { flags:flags } %}
+		  </div>
 	  </div>
 
 	  {% if questionPreview|default(false) %}
