--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/Teacher/item.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/Teacher/item.html.twig
@@ -33,7 +33,7 @@
       </div>
       <div class="metas">
         {% if not app.user or (teacher.id != app.user.id) %}
-          <a class="btn btn-primary btn-sm follow-btn" href="javascript:;" data-url="{{ path('user_follow', {id:teacher.id}) }}" {% if isFollowed %} style="display:none;"{% endif %} data-loggedin={% if app.user and app.user.isLogin() %}"1"{% else %}"0"{% endif %}>{{'关注'|trans}}</a>
+          <a class="btn btn-primary btn-sm follow-btn" href="javascript:;" data-url="{{ path('user_follow', {id:teacher.id}) }}" {% if isFollowed %} style="display:none;"{% endif %} data-loggedin="{% if app.user and app.user.isLogin() %}1{% else %}0{% endif %}">{{'关注'|trans}}</a>
           <a class="btn btn-default btn-sm unfollow-btn" href="javascript:;" data-url="{{ path('user_unfollow', {id:teacher.id}) }}" {% if not isFollowed %} style="display:none;" {% endif %}>{{'已关注'|trans}}</a>
           <a class="btn btn-default btn-sm text-center" data-toggle="modal" data-target="#modal" data-url="{{path('message_create', {toId:teacher.id})}}">{{'私信'|trans}}</a>
         {% endif %}
