--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/alipay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/alipay.html.twig
@@ -34,7 +34,7 @@
   </div>
   <div class="form-group">
     <div class="col-md-3 control-label">
-      <label for="alipay_key">Key</label>
+      <label for="alipay_secret">Key</label>
     </div>
     <div class="controls col-md-8">
       <input type="text" id="alipay_secret" name="alipay_secret" class="form-control" value="{{payment.alipay_secret}}">
@@ -42,7 +42,7 @@
   </div>
   <div class="form-group">
     <div class="col-md-3 control-label">
-      <label for="alipay_key">支付宝账户</label>
+      <label for="alipay_account">支付宝账户</label>
     </div>
     <div class="controls col-md-8">
       <input type="text" id="alipay_account" name="alipay_account" class="form-control" value="{{payment.alipay_account}}">
