--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/heepay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/heepay.html.twig
@@ -24,7 +24,7 @@
 
     <div class="form-group">
       <div class="col-md-3 control-label">
-        <label for="heepay_key">商户平台Key</label>
+        <label for="heepay_secret">商户平台Key</label>
       </div>
       <div class="controls col-md-8">
         <input type="text" id="heepay_secret" name="heepay_secret" class="form-control" value="{{payment.heepay_secret}}">
