--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/llcbpay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/llcbpay.html.twig
@@ -9,11 +9,19 @@
     </div>
   </div>
   <div class="form-group">
-      <div class="col-md-3 control-label">
-        <label for="llcbpay_key">商户账号</label>
-      </div>
-      <div class="controls col-md-8">
-        <input type="text" id="llcbpay_key" name="llcbpay_key" class="form-control" value="{{payment.llcbpay_key}}">
-      </div>
+    <div class="col-md-3 control-label">
+      <label for="llcbpay_key">商户账号</label>
     </div>
+    <div class="controls col-md-8">
+      <input type="text" id="llcbpay_key" name="llcbpay_key" class="form-control" value="{{payment.llcbpay_key}}">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-md-3 control-label">
+      <label for="llcbpay_secret">商户平台Key</label>
+    </div>
+    <div class="controls col-md-8">
+      <input type="text" id="llcbpay_secret" name="llcbpay_secret" class="form-control" value="{{payment.llcbpay_secret}}">
+    </div>
+  </div>
 </fieldset>
