--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/quickly.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/quickly.html.twig
@@ -33,7 +33,7 @@
 
     <div class="form-group">
       <div class="col-md-3 control-label">
-        <label for="quickpay_key">Aes</label>
+        <label for="quickpay_aes">Aes</label>
       </div>
       <div class="controls col-md-8">
         <input type="text" id="quickpay_aes" name="quickpay_aes" class="form-control" value="{{payment.quickpay_aes}}">
