--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/wxpay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/wxpay.html.twig
@@ -22,7 +22,7 @@
   </div>
   <div class="form-group">
     <div class="col-md-3 control-label">
-      <label for="wxpay_key">商户号</label>
+      <label for="wxpay_account">商户号</label>
     </div>
     <div class="controls col-md-8">
       <input type="text" id="wxpay_account" name="wxpay_account" class="form-control" value="{{payment.wxpay_account}}">
@@ -31,7 +31,7 @@
   </div>
   <div class="form-group">
     <div class="col-md-3 control-label">
-      <label for="wxpay_key">商户平台Key</label>
+      <label for="wxpay_secret">商户平台Key</label>
     </div>
     <div class="controls col-md-8">
       <input type="text" id="wxpay_secret" name="wxpay_secret" class="form-control" value="{{payment.wxpay_secret}}">
