theme-open-course-module-text-fix

--- a/src/Topxia/WebBundle/Resources/views/Default/open-course.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Default/open-course.html.twig
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="text-line">
       <h5><span>{{ config.title|default(config.defaultTitle|default('')) }}</span><div class="line"></div></h5>
-      <div class="subtitle">{{ config.subTitle|default(config.defaultSubTitle|default('')) }}</div>
+      <div class="subtitle">{{ config.subTitle|default('随时随地，免费听课。') }}</div>
     </div>
  
     <div class="course-list">
