--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
@@ -29,11 +29,11 @@
                              <label>附件功能</label>
                          </div>
                          <div class="controls col-md-8 radios">
-                             <label class="">
+                             <label>
                                  <input type="radio" name="enable"
                                         value="1" {% if attachment.enable %} checked {% endif %}> 开启
                              </label>
-                             <label class="radio-inline">
+                             <label>
                                  <input type="radio" name="enable"
                                         value="0" {% if not attachment.enable %} checked {% endif %}> 关闭
                              </label>
@@ -49,21 +49,21 @@
                                         value="1" {% if attachment.article %} checked {% endif %}>
                                  资讯
                              </label>
-                             <label class="checkbox-inline">
+                             <label>
                                  <input type="checkbox" name="course"
                                         value="1" {% if attachment.course %} checked {% endif %}>
                                  课程讨论区
                              </label>
-                             <label class="checkbox-inline">
+                             <label>
                                  <input type="checkbox" name="classroom"
                                         value="1" {% if attachment.classroom %} checked {% endif %}>
                                  班级讨论区
                              </label>
-                             <label class="checkbox-inline">
+                             <label>
                                  <input type="checkbox" name="group"
                                         value="1" {% if attachment.group %} checked {% endif %}> 小组
                              </label>
-                             <label class="checkbox-inline">
+                             <label>
                                  <input type="checkbox" name="question"
                                         value="1" {% if attachment.question %} checked {% endif %}> 试题
                              </label>
@@ -74,13 +74,13 @@
                              <label for="fileSize">附件大小</label>
                          </div>
                          <div class="col-md-8 controls">
-                             <input type="text" id="fileSize" name="fileSize" class="form-control"
+                             <input type="text" id="fileSize" name="fileSize" class="form-control width-input-large mrm" style="display:inline-block"
                                     value="{{ attachment.fileSize }}">MB
                              <p class="help-block">当前服务器文件上线为2GB,"0"表示不限制</p>
                          </div>
                      </div>
                      <div class="row form-group">
-                         <div class="controls col-md-offset-2 col-md-8">
+                         <div class="controls col-md-offset-3 col-md-8">
                              <button type="submit" class="btn btn-primary">提交</button>
                          </div>
                      </div>
@@ -88,7 +88,6 @@
                  </form>
              </div>
             {% endif %}
-
             
          </div>
      {% endblock %}
