--- a/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
@@ -4,12 +4,17 @@
   {% do load_script('topxiawebbundle/controller/attachment/upload-form') %}
   <div class="form-group">
     <label class="col-xs-2 control-label" for="thread_title">{{ '附件'|trans }}</label>
-    <div class="col-xs-7 col-xs-10 controls">
-      <ul class="list-unstyled {{list_class}}">
+    <div class="col-xs-7 controls">
+    <!-- <div class="controls"> -->
+      <div class="{{list_class}}" style="inline-height:60px">
         {% for attachment in attachments %}
-          <li>{{ attachment.file.filename }}<button class="btn btn-default js-attachment-delete" data-url="{{path('attachment_delete',{id:attachment.id})  }}" type="button">删除</button> </li>
+          <div class="well well-sm">
+            <img class="mrm" src="{{ asset('assets/img/default/cloud_' ~ attachment.file.type ~ '.png') }}" height="60px">
+            {{ attachment.file.filename }}
+            <button class="btn btn-link js-attachment-delete pull-right" data-url="{{path('attachment_delete',{id:attachment.id})  }}" type="button" style="margin-top:13px">删除</button> 
+          </div>
         {% endfor %}
-      </ul>
+      </div>
       <a class="btn btn-primary js-upload-file" data-toggle="modal" data-backdrop="static"
          data-target="#modal"
          data-url="{{ path('attachment_upload', {idsClass: ids_class, listClass : list_class, token:uploader_token('attachment', app.user.id, 'private')}) }}"
