--- a/src/Topxia/WebBundle/Resources/views/Group/add-thread.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/add-thread.html.twig
@@ -42,7 +42,7 @@
 
         {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'group.thread', targetId: thread.id|default(0)})) }}
 
-        <div class="row">
+        <div class="form-group">
           <div class="col-sm-7 col-xs-10 col-xs-offset-2">
             {% if thread|default(null) %}
               <button id="groupthread-save-btn" data-submiting-text="{{ '正在修改'|trans }}" type="submit"
